--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,8 @@
 <header>
-  <div class="profile-page sidebar-collapse">
-    <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-info" color-on-scroll="400">
-      <div class="container">
-        <div class="navbar-translate">
-          <a class="navbar-brand" href="#"></a> <!-- Necessary to keep the button on the right side -->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu"
-            aria-expanded="false" aria-label="Toggle menu">
-            <span class="navbar-toggler-bar bar1"></span>
-            <span class="navbar-toggler-bar bar2"></span>
-            <span class="navbar-toggler-bar bar3"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="menu">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" [ngxScrollTo]="'#about'">About me</a></li>
-            <li class="nav-item"><a class="nav-link" [ngxScrollTo]="'#experience'">Experience</a></li>
-            <li class="nav-item"><a class="nav-link" [ngxScrollTo]="'#education'">Education</a></li>
-            <li class="nav-item"><a class="nav-link" [ngxScrollTo]="'#mySkills'">Skills</a></li>
-            <li class="nav-item"><a class="nav-link" [ngxScrollTo]="'#certifications'">Certifications</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
+  <ms-header-menu [items]="menuItems"></ms-header-menu>
 </header>
 <div class="page-content">
-  <div class="profile-page">
-    <div class="wrapper">
-      <div class="page-header page-header-small" filter-color="blue">
-        <div class="page-header-image" data-parallax="true"
-          style="background-image: url('assets/images/header_background.jpg');">
-        </div>
-        <div class="container">
-          <div class="content-center">
-            <div class="ms-personal-photo"><img src="assets/images/me.jpeg" alt="me" /></div>
-            <div class="h2 title">Manoela Silva</div>
-            <p class="category text-white">Software Developer, Tech Lead</p>
-            <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="bottom"
-              title="Profile on LinkedIn" href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" rel="external"
-              target="_blank">
-              <i class="fa fa-linkedin-square"></i>
-            </a>
-          </div>
-        </div>
-        <div class="section pb-0">
-          <div class="container">
-            <div class="button-container">
-              <a class="btn btn-info btn-round"
-                href="https://drive.google.com/uc?export=download&id=15Jvl7DESK0ieoPxH-vCqz-NcAHK-eU9J"
-                data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="Manoela Silva - Resume.pdf">Download
-                CV</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <ms-header-body [info]="headerInfo"></ms-header-body>
   <div class="section pb-0" id="about">
     <div class="container">
       <div class="card" data-aos="zoom-in" data-aos-offset="10">
@@ -842,12 +788,7 @@
       </div>
     </div>
   </div>
-  <div class="btn-fab" id="back-to-top">
-    <button type="button" class="btn btn-info btn-icon btn-round has-tooltip" placement="left"
-      ngbTooltip="Back to Top">
-      <i class="fa fa-arrow-up"></i>
-    </button>
-  </div>
+  <ms-back-to-top-button></ms-back-to-top-button>
 </div>
 <footer class="footer">
   <div class="text-center">
