about me componentization

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,96 +4,11 @@
 <div class="page-content">
   <ms-header-body [info]="headerInfo"></ms-header-body>
   <div class="section pb-0" id="about">
-    <div class="container">
-      <div class="card" data-aos="zoom-in" data-aos-offset="10">
-        <div class="row">
-          <div class="col-lg-6 col-md-12">
-            <div class="card-body">
-              <div class="h5 mt-0 title">About me</div>
-              <div class="text-justify">
-                <p>I am a Senior Software Developer who is passionate about technology. Seeing an idea getting off
-                  the ground and becoming something that improves people's lives brings me real joy.</p>
-                <p>Although I have a proper knowledge of front-end techniques, my inclination is towards
-                  back-end. I am also really fond of good development techniques, such as clean code, design patterns,
-                  and so on, and I try to apply them as much as possible.</p>
-                <p>Additionally, I have a strong can-do, hands-on attitude, and I am a true believer of teamwork. I am
-                  from the opinion that "two heads are better than one" and knowledge can always be improved.
-                  I just love learning new things and acquiring new skills.
-                </p>
-              </div>
-
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-12">
-            <div class="card-body">
-              <div class="h5 mt-0 title">Details</div>
-              <div class="row">
-                <div class="col-lg-3"><strong class="text-capitalize">Age:</strong></div>
-                <div class="col-lg-9">28</div>
-              </div>
-              <div class="row mt-3">
-                <div class="col-lg-3"><strong class="text-capitalize">Email:</strong></div>
-                <div class="col-lg-9">manoelacamila.silva@gmail.com</div>
-              </div>
-              <div class="row mt-3">
-                <div class="col-lg-3"><strong class="text-capitalize">Phone:</strong></div>
-                <div class="col-lg-9">+55 11 94989-8386</div>
-              </div>
-              <div class="row mt-3">
-                <div class="col-lg-3"><strong class="text-capitalize">Location:</strong></div>
-                <div class="col-lg-9">São Paulo - SP, Brazil</div>
-              </div>
-            </div>
-            <div class="card-body">
-              <div class="h5 mt-0 title">Languages</div>
-              <div class="row languages">
-                <div class="col-4">
-                  <div class="circular-progress progress-90">
-                    <span class="progress-left">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value progress-value-90">90%</div>
-                  </div>
-                  <p class="text-center">English</p>
-                </div>
-                <div class="col-4">
-                  <div class="circular-progress progress-100">
-                    <span class="progress-left">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value progress-value-100">100%</div>
-                  </div>
-                  <p class="text-center">Portuguese</p>
-                </div>
-                <div class="col-4">
-                  <div class="circular-progress progress-65">
-                    <span class="progress-left">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value">60%</div>
-                  </div>
-                  <p class="text-center">Italian</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ms-about-me [info]="aboutMeInfo"></ms-about-me>
   </div>
   <div class="section pb-0" id="experience">
     <div class="container">
       <div class="h4 text-center mb-4 title">Work Experience</div>
-
       <ul class="timeline">
         <li>
           <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
