work experience and education modularization / translations beginning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,257 +9,13 @@
   <div class="section pb-0" id="experience">
     <div class="container">
       <div class="h4 text-center mb-4 title">Work Experience</div>
-      <ul class="timeline">
-        <li>
-          <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
-          <div class="timeline-card" data-aos="fade-right" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="position">
-                <span class="h5">Senior Software Developer / Tech Lead</span>
-              </div>
-              <div class="company">
-                <span>OPUS Software Ltda.</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Nov 2019 - Current</button>
-              </div>
-            </div>
-            <div class="timeline-card-body">
-              <p>OPUS Software is a software development consulting company based in São Paulo - Brazil.
-                As Tech Lead and Senior Developer, my responsabilities consist mostly of designing solutions, coding,
-                performing code review and assisting my colleagues in order to come out with the best
-                solutions and practices. Currently, I am part of a team that develops and mantains a white label
-                platform that provides bank loans for individuals. Some of the activities I have been involved are
-                given
-                as follows:</p>
-
-              <ul class="list-unstyled ms-main-projects">
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Evolution of a bank loan application into a
-                  white label plataform which allowed the client to offer the platform to key partners with minimal
-                  effort and profit from the loans provided by the partners</li>
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Study and initiation of the use of AWS
-                  Batch for batch processing</li>
-                <li><i class="fa fa-info-circle ms-bullet" aria-hidden="true"></i>Recording of a training on how the
-                  white
-                  label platform works, in both technical and user's experience levels, to facilitate the onboarding
-                  of new members to the team. Before that, a member of the team had to give the same training over and
-                  over again every time a new person would ome along</li>
-              </ul>
-            </div>
-
-            <div class="timeline-footer">
-              <span class="text-info">Java11, Spring Boot, Angular 6, PostgreSQL, AWS, Git, Jira, Scrum,
-                Jenkins, <a class="scroll-behavior-smooth" href="#mySkills"><i class="fa fa-plus-circle"></i></a></span>
-            </div>
-          </div>
-        </li>
-
-        <li class="timeline-inverted">
-          <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
-          <div class="timeline-card" data-aos="fade-left" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="position">
-                <span class="h5">Software Developer</span>
-              </div>
-              <div class="company">
-                <span>OPUS Software Ltda.</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Nov 2017 - Nov 2019</button>
-              </div>
-            </div>
-            <div class="timeline-card-body">
-              <p>Due to the fact that OPUS Sotware is a consulting company, I have the opportunity of working in many
-                different projects and with a variety of technologies. As a Software Developer, the main
-                projects I was involved to were:</p>
-              <ul class="list-unstyled ms-main-projects">
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Development of an Open API architecture and
-                  responsive web app that provide bank loans for individuals, which soon achieved the mark of R$1M
-                  in loans granted and allowed the client to close several loan dedicated branches reducing their
-                  expenses</li>
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Remodelling of the database and API
-                  structure of a big food delivery company's app, creating a
-                  well-defined ETL process and increasing their code-efficiency by 10x</li>
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Development of an platform that allows
-                  individuals and companies to join consortiums of real estate, vehicles and/or services </li>
-              </ul>
-            </div>
-            <div class="timeline-footer">
-              <span class="text-info">Java8, Spring Boot, Angular 2, My SQL, AWS, Git, Jira, Scrum, Jenkins,
-                <a class="scroll-behavior-smooth" href="#mySkills"><i class="fa fa-plus-circle"></i></a></span>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
-          <div class="timeline-card" data-aos="fade-right" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="position">
-                <span class="h5">Web developer</span>
-              </div>
-              <div class="company">
-                <span>Audaxware LLC</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Nov 2015 - Apr 2020</button>
-              </div>
-            </div>
-            <div class="timeline-card-body">
-              <p>Audaxware is a startup based in Austin - Texas whose product is a project planning system. Back in
-                2015
-                they had an old system which was developed using ASP.Net with a PostgreSQL database, and they wanted
-                to change it to C#, AngularJS and SQL Server. My main activities were:</p>
-              <ul class="list-unstyled ms-main-projects">
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Rewrite of the old system using the
-                  technologies above mentioned and evolution of the system, which not only improved the user
-                  experience, but also the code efficiency, allowing the onboarding of two new big companies to
-                  the software</li>
-                <li><i class="fa fa-database ms-bullet" aria-hidden="true"></i>Data migration from PostgreSQL to SQL
-                  Server</li>
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Support to the old system until the new one
-                  was ready to be released and the data migration was done</li>
-                <li><i class="fa fa-info-circle ms-bullet" aria-hidden="true"></i>Support to the clients on how to use
-                  the system</li>
-              </ul>
-
-              <p>From Nov 2017 to Apr 2020 I was maintaing and evolving the software as a part-time freelancer.</p>
-            </div>
-            <div class="timeline-footer">
-              <span class="text-info">C#, SQL Server, AngularJS, Kendo UI, Material, Azure, Web Job, TFS,
-                Kanban</span>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
-          <div class="timeline-card" data-aos="fade-left" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="position">
-                <span class="h5">System Analyst</span>
-              </div>
-              <div class="company">
-                <span>OPUS Software Ltda.</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Jan 2015 - Nov 2015</button>
-              </div>
-            </div>
-            <div class="timeline-card-body">
-              <p>This was my first job related to technology. I was just finishing my Bachelor's Degree when I got
-                there, and it provided a great environment for me to learn and grow as professional. The main projects
-                I was involved were:</p>
-              <ul class="list-unstyled ms-main-projects">
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Development of an online learning
-                  responsive webapp for an English school.</li>
-                <li><i class="fa fa-code ms-bullet" aria-hidden="true"></i>Development of a repository containing
-                  front-end components to be used internally on new projects. The idea here was to have something like
-                  a internal bootstrap to optimize developers' time when initiating new projects</li>
-              </ul>
-            </div>
-
-            <div class="timeline-footer">
-              <span class="text-info">C#, SQL Server, AngularJS, Knockout, Bootstrap, Scrum</span>
-            </div>
-          </div>
-        </li>
-
-        <li class="clearfix" style="float: none;"></li>
-      </ul>
+      <ms-work-experience [experiences]="workExperiences"></ms-work-experience>
     </div>
   </div>
   <div class="section pb-0" id="education">
     <div class="container">
       <div class="h4 text-center mb-4 title">Education</div>
-
-
-      <ul class="timeline">
-        <li>
-          <div class="timeline-badge"><a><i class="fa fa-graduation-cap"></i></a></div>
-          <div class="timeline-card" data-aos="fade-right" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="title">
-                <span class="h5">Master's Degree</span>
-              </div>
-              <div class="major">
-                <span class="h6">Computer Science / Business Intelligence</span>
-              </div>
-              <div class="company">
-                <span>Federal University of São Carlos</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Aug 2015 - Aug 2017</button>
-              </div>
-            </div>
-            <div class="timeline-card-body">
-              <div>
-                <p class="mb-2"><strong>Thesis title</strong></p>
-                <p>Take your time but do not wait too long: Decision-making by user demand using web data</p>
-              </div>
-            </div>
-            <div class="timeline-footer">
-              <div class="row">
-                <div class="ms-thesis-link col-5">
-                  <a href="https://repositorio.ufscar.br/handle/ufscar/9154" rel="external" target="_blank">
-                    Thesis (pt-br) <i class="fa fa-external-link text-info"></i>
-                  </a>
-                </div>
-
-                <div class="col-7 text-right">
-                  <span>Sorocaba, SP, Brazil</span><i class="fa fa-map-marker text-info"></i>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </li>
-
-        <li class="timeline-inverted">
-          <div class="timeline-badge"><a><i class="fa fa-graduation-cap"></i></a></div>
-          <div class="timeline-card" data-aos="fade-left" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="position">
-                <span class="h5">Bachelor's Degree</span>
-              </div>
-              <div class="major">
-                <span class="h6">Computer Science</span>
-              </div>
-              <div class="company">
-                <span>Federal University of São Carlos</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Feb 2011 - Jul 2015</button>
-              </div>
-            </div>
-            <div class="timeline-footer text-right">
-              <span class="text-info">Sorocaba, SP, Brazil</span><i class="fa fa-map-marker text-info"></i>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-badge"><a><i class="fa fa-graduation-cap"></i></a></div>
-          <div class="timeline-card" data-aos="fade-right" data-aos-offset="50" data-aos-duration="700">
-            <div class="timeline-card-title">
-              <div class="title">
-                <span class="h5">Academic Exchange</span>
-              </div>
-              <div class="major">
-                <span class="h6">Computer Science</span>
-              </div>
-              <div class="company">
-                <span>Sapienza Univerity of Rome</span>
-              </div>
-              <div class="period">
-                <button class="btn btn-dark btn-round ms-btn-period">Aug 2013 - Aug 2014</button>
-              </div>
-            </div>
-            <div class="timeline-footer text-right">
-              <span class="text-info">Rome, Italy</span><i class="fa fa-map-marker text-info"></i>
-            </div>
-          </div>
-        </li>
-
-        <li class="clearfix" style="float: none;"></li>
-      </ul>
+      <ms-education [items]="education"></ms-education>      
     </div>
   </div>
 
