--- a/src/app/components/ms-language-level/ms-language-level.component.html
+++ b/src/app/components/ms-language-level/ms-language-level.component.html
@@ -7,4 +7,4 @@
     </span>
     <div class="progress-value" [ngClass]="progressValueClass">{{info.level}}%</div>
 </div>
-<p class="text-center">{{info.language}}</p>
+<p class="text-center">{{info.language | translate: 'language'}}</p>
