--- a/src/styles.css
+++ b/src/styles.css
@@ -206,10 +206,6 @@
     font-weight: 600;
   }
   
-  .timeline-card-title .company>span, .timeline-card-title .company>p {
-    font-style: italic;
-  }
-  
   .timeline-footer {
     padding: 20px;
     background-color: #f4f4f4;
@@ -309,7 +305,7 @@
     background: #2ca8ff !important;
     opacity: 0.7;
     box-shadow: none;
-    cursor: default;
+    cursor: default !important;
     font-weight: bold;
     margin-left: -5px;
     height: 30px;
@@ -411,11 +407,6 @@
     .ms-hard-skills {
       max-width: 74%;
     }
-  }
-  
-  .ms-thesis-link a {
-    text-decoration: none;
-    outline: none;
   }
   
   /* Certification */
