transform period button into a component

--- a/src/app/components/education/ms-education-item/ms-education-item.component.html
+++ b/src/app/components/education/ms-education-item/ms-education-item.component.html
@@ -9,7 +9,7 @@
         <span>{{info.school | translate: 'school'}}</span>
     </div>
     <div class="period">
-        <button class="btn btn-dark btn-round ms-btn-period">{{info.period | period}}</button>
+        <ms-btn-period [period]="info.period"></ms-btn-period>
     </div>
 </div>
 <div class="timeline-card-body" *ngIf="info.additionalInfo">
