--- a/src/app/components/work-experience/ms-work-experience-item/ms-work-experience-item.component.html
+++ b/src/app/components/work-experience/ms-work-experience-item/ms-work-experience-item.component.html
@@ -6,7 +6,7 @@
         <span>{{info.company}}</span>
     </div>
     <div class="period">
-        <button class="btn btn-dark btn-round ms-btn-period">{{info.period | period}}</button>
+        <ms-btn-period [period]="info.period"></ms-btn-period>
     </div>
 </div>
 <div class="timeline-card-body">
