--- a/src/app/components/ms-header-menu/ms-header-menu.component.html
+++ b/src/app/components/ms-header-menu/ms-header-menu.component.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="menu">
           <ul class="navbar-nav">
             <li class="nav-item" *ngFor="let item of items">
-              <a class="nav-link" (click)="scrollTo(item.target)">{{item.name}}</a>
+              <a class="nav-link" (click)="scrollTo(item.target)">{{item.name | translate: 'menuItem'}}</a>
             </li>
           </ul>
         </div>
