--- a/src/app/components/education/ms-education/ms-education.component.html
+++ b/src/app/components/education/ms-education/ms-education.component.html
@@ -1,3 +1,4 @@
+<div class="h4 text-center mb-4 title">{{title | translate: 'title'}}</div>
 <ul class="timeline">
     <li *ngFor="let item of items; index as i" [class.timeline-inverted]="isInvertedCard(i)">
         <div class="timeline-badge"><a><i class="fa fa-graduation-cap"></i></a></div>
