--- a/src/app/components/work-experience/ms-work-experience/ms-work-experience.component.html
+++ b/src/app/components/work-experience/ms-work-experience/ms-work-experience.component.html
@@ -1,3 +1,4 @@
+<div class="h4 text-center mb-4 title">{{title | translate: 'title'}}</div>
 <ul class="timeline">
   <li *ngFor="let experience of experiences; index as i" [class.timeline-inverted]="isInvertedCard(i)" >
     <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
