--- a/src/app/components/skills/ms-hard-skills/ms-hard-skills.component.html
+++ b/src/app/components/skills/ms-hard-skills/ms-hard-skills.component.html
@@ -1,1 +1,5 @@
-<p>ms-hard-skills works!</p>
+<div class="row">
+    <div *ngFor="let skills of skillGroups" class="col-md-6">
+        <ms-hard-skills-item *ngFor="let skill of skills" [skill]="skill"></ms-hard-skills-item>
+    </div>
+</div>
