footer / linkedin button / external link and tooltip layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,16 +29,4 @@
   </div>
   <ms-back-to-top-button></ms-back-to-top-button>
 </div>
-<footer class="footer">
-  <div class="text-center">
-    <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="top" title="Profile on LinkedIn"
-      href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" target="_blank" rel="external">
-      <i class="fa fa-linkedin-square"></i>
-    </a>
-  </div>
-
-  <div class="h4 title text-center mt-0">Manoela Silva</div>
-  <div class="text-center text-muted">
-    <p>&copy; {{currentYear}}</p>
-  </div>
-</footer>
+<ms-footer></ms-footer>
