--- a/src/app/components/education/ms-education-item/ms-education-item.component.html
+++ b/src/app/components/education/ms-education-item/ms-education-item.component.html
@@ -20,7 +20,7 @@
 </div>
 <div class="timeline-footer">
     <div class="row">
-        <div class=".ms-external-link col-5" *ngIf="info.externalLink">
+        <div class="ms-external-link col-5" *ngIf="info.externalLink">
             <a [href]="info.externalLink.uri" rel="external" target="_blank">
                 {{info.externalLink.label}} <i class="fa fa-external-link text-info"></i>
             </a>
