--- a/src/app/components/ms-header-body/ms-header-body.component.html
+++ b/src/app/components/ms-header-body/ms-header-body.component.html
@@ -9,10 +9,7 @@
           <div class="ms-personal-photo"><img [src]="info.photoUrl" alt="me" /></div>
           <div class="h2 title">{{ info.name }}</div>
           <p class="category text-white">{{ info.positions | translate: 'position' }}</p>
-          <a class="btn btn-icon btn-round btn-linkedin has-tooltip" placement="left" ngbTooltip="Profile on LinkedIn" [href]="info.linkedinUrl" rel="external"
-            target="_blank">
-            <i class="fa fa-linkedin-square"></i>
-          </a>
+          <ms-btn-linkedin [position]="'bottom'"></ms-btn-linkedin>
         </div>
       </div>
       <div class="section pb-0">
