--- a/src/app/components/ms-header-menu/ms-header-menu.component.css
+++ b/src/app/components/ms-header-menu/ms-header-menu.component.css
@@ -10,3 +10,15 @@
 .nav-link:hover {
     cursor: pointer;
 }
+
+.navbar-brand {
+  margin: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.navbar-brand:hover {
+  background-color: rgba(255,255,255,.2);
+  border-radius: .1875rem;
+  cursor: pointer;
+}
