Modified `about me` information to change according to the selected language

--- a/src/app/components/about-me/ms-about-me/ms-about-me.component.html
+++ b/src/app/components/about-me/ms-about-me/ms-about-me.component.html
@@ -3,19 +3,20 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{title | translate: 'title'}}</div>
+                    <div class="h5 mt-0 title">{{ title }}</div>
                     <div class="text-justify">
-                        <p *ngFor="let paragraph of info.bioParagraphs">{{paragraph}}</p>
+                        <p *ngFor="let paragraph of bioParagraphs">{{ paragraph }}</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{detailsSectionTitle | translate: 'title'}}</div>
-                    <ms-detail-item *ngFor="let item of info.details" [info]="item"></ms-detail-item>
+                    <div class="h5 mt-0 title">{{ detailsSectionTitle }}</div>
+                    <ms-about-me-detail-item *ngFor="let item of info.details" [info]="item">
+                        </ms-about-me-detail-item>
                 </div>
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{languagesSectionTitle | translate: 'title'}}</div>
+                    <div class="h5 mt-0 title">{{ languagesSectionTitle }}</div>
                     <div class="row languages">
                         <div class="col-4" *ngFor="let language of info.languages">
                             <ms-language-level [info]="language"></ms-language-level>
