--- a/src/app/components/education/ms-education/ms-education.component.html
+++ b/src/app/components/education/ms-education/ms-education.component.html
@@ -1,9 +1,9 @@
-<div class="h4 text-center mb-4 title">{{title | translate: 'title'}}</div>
+<div class="h4 text-center mb-4 title">{{ title | translate: 'TITLE':language }}</div>
 <ul class="timeline">
     <li *ngFor="let item of items; index as i" [class.timeline-inverted]="isInvertedCard(i)">
         <div class="timeline-badge"><a><i class="fa fa-graduation-cap"></i></a></div>
         <div class="timeline-card" [attr.data-aos]="isInvertedCard(i) ? 'fade-left' : 'fade-right'" data-aos-offset="50" data-aos-duration="700">
-            <ms-education-item [info]="item"></ms-education-item>
+            <ms-education-item [info]="item" [language]="language"></ms-education-item>
         </div>
     </li>
 
