--- a/src/app/components/work-experience/ms-work-experience-item/ms-work-experience-item.component.html
+++ b/src/app/components/work-experience/ms-work-experience-item/ms-work-experience-item.component.html
@@ -1,12 +1,12 @@
 <div class="timeline-card-title">
     <div class="position">
-        <span class="h5">{{ positions | positions }}</span>
+        <span class="h5">{{ info.positions | positions: language }}</span>
     </div>
     <div class="company">
-        <span>{{ company }}</span>
+        <span>{{ info.company }}</span>
     </div>
     <div class="period">
-        <ms-btn-period [period]="period"></ms-btn-period>
+        <ms-btn-period [period]="info.period"></ms-btn-period>
     </div>
 </div>
 <div class="timeline-card-body">
