--- a/src/app/components/work-experience/ms-work-experience/ms-work-experience.component.html
+++ b/src/app/components/work-experience/ms-work-experience/ms-work-experience.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let experience of experiences; index as i" [class.timeline-inverted]="isInvertedCard(i)" >
     <div class="timeline-badge"><a><i class="fa fa-dot-circle-o"></i></a></div>
     <div class="timeline-card" [attr.data-aos]="isInvertedCard(i) ? 'fade-left' : 'fade-right'" data-aos-offset="50" data-aos-duration="700">
-      <ms-work-experience-item [info]="experience"></ms-work-experience-item>
+      <ms-work-experience-item [info]="experience" [language]="language"></ms-work-experience-item>
     </div>
   </li>
 
