modified 'skills' section to change according to the system language

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
   <div class="section pb-0" id="mySkills">
     <div class="container">
-      <ms-skills [skills]="skills"></ms-skills>
+      <ms-skills [skills]="skills" [language]="language" [language]="systemLanguage"></ms-skills>
     </div>
   </div>
   <div class="section pb-0" id="certifications">
