--- a/src/app/components/skills/ms-skills/ms-skills.component.html
+++ b/src/app/components/skills/ms-skills/ms-skills.component.html
@@ -1,10 +1,10 @@
-<div class="h4 text-center mb-4 title">{{ title | translate: 'title' }}</div>
+<div class="h4 text-center mb-4 title">{{ title | translate: 'TITLE':language }}</div>
 <div class="row justify-content-between">
     <div class="card col-lg-9 col-md-12 ms-hard-skills">
         <div class="card-body">
             <div class="h5 mt-0 title">Hard Skills</div>
             <div data-aos="fade-right" data-aos-duration="700">
-                <ms-hard-skills [skills]="skills.hardSkills"></ms-hard-skills>
+                <ms-hard-skills [skills]="skills.hardSkills" [language]="language"></ms-hard-skills>
             </div>
         </div>
     </div>
@@ -12,7 +12,7 @@
         <div class="card-body">
             <div class="h5 mt-0 title">Soft Skills</div>
             <div data-aos="fade-up" data-aos-duration="700">
-                <ms-soft-skills [skills]="skills.softSkills"></ms-soft-skills>
+                <ms-soft-skills [skills]="skills.softSkills" [language]="language"></ms-soft-skills>
             </div>
         </div>
     </div>
