--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,12 +19,12 @@
 
   <div class="section pb-0" id="mySkills">
     <div class="container">
-      <ms-skills [skills]="skills" [language]="language" [language]="systemLanguage"></ms-skills>
+      <ms-skills [skills]="skills" [language]="systemLanguage"></ms-skills>
     </div>
   </div>
   <div class="section pb-0" id="certifications">
     <div class="container">
-      <ms-certifications [items]="certifications"></ms-certifications>
+      <ms-certifications [items]="certifications" [language]="systemLanguage"></ms-certifications>
     </div>
   </div>
   <ms-back-to-top-button></ms-back-to-top-button>
