--- a/src/app/components/certifications/ms-certifications/ms-certifications.component.html
+++ b/src/app/components/certifications/ms-certifications/ms-certifications.component.html
@@ -1,2 +1,2 @@
-<div class="h4 text-center mb-4 title">{{ title | translate: 'title' }}</div>
+<div class="h4 text-center mb-4 title">{{ title | translate: 'TITLE':language }}</div>
 <ms-certification-item *ngFor="let item of items" [info]="item"></ms-certification-item>
