--- a/src/app/components/ms-footer/ms-footer.component.html
+++ b/src/app/components/ms-footer/ms-footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="text-center">
-        <ms-btn-linkedin [position]="'top'"></ms-btn-linkedin>
+        <ms-btn-linkedin [position]="'top'" [language]="language"></ms-btn-linkedin>
     </div>
 
     <div class="h4 title text-center mt-0">Manoela Silva</div>
