--- a/src/app/components/ms-header-menu/ms-header-menu.component.html
+++ b/src/app/components/ms-header-menu/ms-header-menu.component.html
@@ -21,4 +21,4 @@
   </nav>
 </div>
 
-<ms-system-language-modal [id]="'systemLanguageModal'"></ms-system-language-modal>
+<ms-system-language-modal [id]="'systemLanguageModal'" [language]="language"></ms-system-language-modal>
