--- a/src/app/components/about-me/ms-about-me-detail-item/ms-about-me-detail-item.component.html
+++ b/src/app/components/about-me/ms-about-me-detail-item/ms-about-me-detail-item.component.html
@@ -1,4 +1,4 @@
 <div class="row mt-3">
-    <div class="col-lg-3"><strong class="text-capitalize">{{ title }}:</strong></div>
-    <div class="col-lg-9">{{ information }}</div>
+    <div class="col-lg-3"><strong class="text-capitalize">{{ info.title | translate: 'TITLE':language }}:</strong></div>
+    <div class="col-lg-9">{{ info.info | translate: 'ABOUT_ME_INFO':language }}</div>
 </div>
