--- a/src/app/components/about-me/ms-about-me/ms-about-me.component.html
+++ b/src/app/components/about-me/ms-about-me/ms-about-me.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{ title }}</div>
+                    <div class="h5 mt-0 title">{{ title | translate: 'TITLE':language }}</div>
                     <div class="text-justify">
                         <p *ngFor="let paragraph of bioParagraphs">{{ paragraph }}</p>
                     </div>
@@ -11,15 +11,15 @@
             </div>
             <div class="col-lg-6 col-md-12">
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{ detailsSectionTitle }}</div>
-                    <ms-about-me-detail-item *ngFor="let item of info.details" [info]="item">
+                    <div class="h5 mt-0 title">{{ detailsSectionTitle | translate: 'TITLE':language }}</div>
+                    <ms-about-me-detail-item *ngFor="let item of info.details" [info]="item" [language]="language">
                         </ms-about-me-detail-item>
                 </div>
                 <div class="card-body">
-                    <div class="h5 mt-0 title">{{ languagesSectionTitle }}</div>
+                    <div class="h5 mt-0 title">{{ languagesSectionTitle | translate: 'TITLE':language }}</div>
                     <div class="row languages">
-                        <div class="col-4" *ngFor="let language of info.languages">
-                            <ms-language-level [info]="language"></ms-language-level>
+                        <div class="col-4" *ngFor="let languageLevel of info.languages">
+                            <ms-language-level [info]="languageLevel" [system-language]="language"></ms-language-level>
                         </div>
                     </div>
                 </div>
